﻿Version 3.0.2.5:
	- Fixed Linux and Mac GUI.

Version 3.0.2.4:
	- Fixed custom assembly loading.

Version 3.0.2.3:
	- Added changelog button to the update dialog.
	- Dialogs no longer show in the taskbar.
	- Fixed line endings in the changelog dialog.
	- Added a menu item to rename instances.

Version 3.0.2.2:
	- DotNetZip is now embedded and does not need to be downloaded.
	- Added a changelog button in the about dialog to show the changelog.
	- AudioMod should now load sounds properly.

Version 3.0.2.1:
	- Made the edit mods menu a bit more intuitive.

Version 3.0.2.0:
	- Released v3!

Version 3.0.1.3:
	- If custom icons fail to load, MultiMC will now skip custom icons, 
	  load only the built in ones and show an error message to the user
	  on startup.
	- MultiMC now uses GTK when running under Mono runtime regardless of 
	  the OS.

Version 3.0.1.2:
	- Fixed a bug with single player commands.

Version 3.0.1.1:
	- Disabled help button until the help menu is done.

Version 3.0.1.0:
	- Finished GTK GUI.
	- Added changelog.