@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+
+namespace MultiMC.GUI
+{
+	public interface ISettingsDialog : IDialog
+	{
+		bool ForceUpdate
+		{
+			get;
+		}
+	}
+}
